First Generic draft adapted to JandJ

--- a/cv-en-short.tex
+++ b/cv-en-short.tex
@@ -121,7 +121,7 @@ Highly adaptable and currious, I enjoy learning on a daily basis and sharing my 
  
 %------------------------------------------------
 \entry
-  {2020}
+  {2020 -- today}
   {Safran}
   {Defence}
   {\jobtitle{Systems engineer}\\
