--- a/cv-fr-short.tex
+++ b/cv-fr-short.tex
@@ -121,7 +121,7 @@ D'une grande capacité d'adaptation et très curieuse, j’aime apprendre au quo
  
 %------------------------------------------------
 \entry
-  {2020}
+  {2020 -- today}
   {Safran}
   {Défense}
   {\jobtitle{Ingénieure système}\\
