--- a/coverletter-en.tex
+++ b/coverletter-en.tex
@@ -39,7 +39,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 %\photo[circle,noedge,left]{img/LG.png}
 \name{Laura }{Gomez}
-\position{Technical Project Manager{\enskip\cdotp\enskip}Mechatronics and Biomedical engineer}
+\position{System Engineer{\enskip\cdotp\enskip}Mechatronics and Biomedical engineer}
 \address{Antony, France}
 
 \mobile{(+33) 7 70 49 23 44}
@@ -58,7 +58,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``The mouth is the mirror of our health."}
+\quote{``Millons saw the apple fall but Newton asked why. Bernard Baruch"}
 
 
 %-------------------------------------------------------------------------------
@@ -67,24 +67,22 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {FKG Dentaire S.A.}
-  {La Chaux-de-Fonds\\Switzerland}
+  {Johnson \& Johnson}
+ % {City\\Switzerland}
+  {Switzerland}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{R\&D Project Manager}
+\lettertitle{Technical Project Manager}
 % How the letter is opened
-\letteropening{Dear Sir or Madam}
+\letteropening{Dear Sir or Madam,}
 % How the letter is closed
-\letterclosing{
-I would be thrilled to learn more about this job opening. Thank you for your time and I look forward to hearing from you.\\ \\Best Regards,}
+\letterclosing{Best Regards,}
 % Any enclosures with the letter
-\letterenclosure[Attached]{Curriculum Vitae}
-
+%\letterenclosure[Attached]{Curriculum Vitae}
 
 %-------------------------------------------------------------------------------
 \begin{document}
-
 % Print the header with above personal informations
 % Give optional argument to change alignment(C: center, L: left, R: right)
 \makecvheader[R]
@@ -106,14 +104,16 @@ I would be thrilled to learn more about this job opening. Thank you for your tim
 
 %\lettersection{Introduction}
 
-Passionate and with an analytical mindset, I love finding solutions to help people stay healthy and improve their daily lives.
-That is why I chose to further my mechatronics engineering studies with a biomedical specialization. 
+Passionate, curious and with an analytical mindset, I love finding solutions to help people stay healthy and improve their daily lives.
+That is why I chose to complet two masters. One in mechatronics engineering and the second one on a research master's in biomechanical with a specialization in biomechanics. 
 
-During my research Master's in biomedical engineering, I had the opportunity to do an intership with a group consisting of dentists and researchers at the INSERM Centre de recherche des Cordeliers in Paris. 
-Their subject of research was the impact of a muscle segment homeobox gene on dental development. 
-This experience introduced me to what turned out to be a fascinating subject, namely biomedical engineering for dental applications. I continued my professional experience in the medical field by working for Air Liquide Medical Systems on respiratory devices as a project manager and mechanics specialist, 
-and I can say that my experience aligns perfectly with the qualifications you are seeking at FKG Dentaire S.A.
-That is why I am certain I would make a valuable addition to your organisation.
+The mechatronics is the interface of the three domains of robotics. Namely the mechanics, the automatics and the software.
+I chose to add a fourth domain to it (the more complex in my opinion), Human. As I could see during my career, the complexity of the interaction between a system and us, humans is high by two aspects.
+First of all, the body is a complex system, as I could experiment during my research for the CEA, working in a sluterhouse. But the comfort and the social aspect are also to take into account and depends on an incredible high number of parameters.
+But the research in new technologies is the fastest way to improve the daily life of patients.
+
+During my experience in research and industrial product development, I had the chance to cover all phases of new products and update of industrialized ones.
+From the understanding of the need (biomechanical study) to the concept, design, prototyping, validation and manufacturing leading. 
 
 In fact, during my career, I had some great experiences as a technical project leader. 
 Following a product's lifecycle from the customer's requirements to its delivery and working closely with all the internal and external stakeholders.
@@ -123,37 +123,11 @@ In collaboration with the team leaders, I established the different deadlines an
 In addition to the organizational part, I asked to perform tests when derisking was necessary, and I conceved a harness to confrom to the client's needs regarding the electronical parts to control, the dimensions required and the path it would take through the airplane seats.
 When the first system was completed, I went to test it with a software engineer at the client's site, in order to validate the results.
 
-Highly adaptable, methodical and proactive, you will be able to count on me to support the R\&D and Project Managers as well as the Sales Team
-to lead the project to succes while also to capitalize the knowledge by keeping the documentation up to date. 
+Highly adaptable, methodical and proactive, you will be able to count on me to support the R\&D and Project Managers as well as the Sales and Marketing Teams
+to lead the project to succes in a cross-functional and cross-cultural environment.
 
-% Establish project timeline and costs based on available resources
-% Propose and set up an appropriate project team for each project
-% Manage the project teams by organizing and leading project meetings, assigning tasks and deadlines
-% to project members, and ensuring follow-up
-% Translate product claims and marketing specifications into functional (technical) specifications
-% Manage and formalize all product verification and design validation efforts
-% Ensure the adequacy of production processes needed for new products
-% Report on a regular basis on project progress and related issues to the R\&D Manager and
-% Management Team, or if applicable to the ad hoc steering committee
-% Setup and maintain project and product documentation
-% Supervise projects and maintain documentation related to product changes/improvements.
-% Support the Product Managers and Sales force as technical expert, including after the market launch
-% Assist the R\&D Manager in scientific/technology and surveillance efforts as well as in the assessment
-% of new product and project ideas
-% Your profile :
-
-% University degree in mechanical, mechatronic or material science engineering
-% Min 5 years of professional experience in a similar function in the medical device industry
-% Proven strong organizational and project management
-% Ability to read and interpret scientific literature
-% Ability to lead change and evolve in a mutating environment
-% Fluent French and English, both written and spoken
-% Expert use of Microsoft-Office tools
-% Strong drive for results and achievements
-% Synthetic and analytical mindset
-% Strong influential and communication skills, ability to interact frequently and efficiently with internal
-% and external stakeholders in R&D and product management
-
+Motivated to be part of an international and innovative team I would be thrilled to join Johnson \& Johnson to continue to learn and grow while contributing in delivering impactful products to patients worldwide.
+%I would be thrilled to learn more about this job opening. Thank you for your time and I look forward to hearing from you.
 
 \end{cvletter}
 
