--- a/coverletter-en.tex
+++ b/coverletter-en.tex
@@ -58,7 +58,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``Millons saw the apple fall but Newton asked why. Bernard Baruch"}
+\quote{``Millions saw the apple fall, Newton was the only one who asked why?. Bernard Baruch"}
 
 
 %-------------------------------------------------------------------------------
@@ -104,29 +104,26 @@
 
 %\lettersection{Introduction}
 
-Passionate, curious and with an analytical mindset, I love finding solutions to help people stay healthy and improve their daily lives.
-That is why I chose to complet two masters. One in mechatronics engineering and the second one on a research master's in biomechanical with a specialization in biomechanics. 
+Passionate, curious and with an analytical mindset, I love finding solutions to help people stay healthy and improve their daily lives;
+and it is this passion which has guided me in my choice of studies. Firstly, with a master's degree in mechatronic engineering and then by studying a second master's in biomechanical engineering. 
 
-The mechatronics is the interface of the three domains of robotics. Namely the mechanics, the automatics and the software.
-I chose to add a fourth domain to it (the more complex in my opinion), Human. As I could see during my career, the complexity of the interaction between a system and us, humans is high by two aspects.
-First of all, the body is a complex system, as I could experiment during my research for the CEA, working in a sluterhouse. But the comfort and the social aspect are also to take into account and depends on an incredible high number of parameters.
-But the research in new technologies is the fastest way to improve the daily life of patients.
+What attracts me to Johnson \& Johnson is the great number of solutions you develop to Keep People Moving. From skull implants to foot screws, you innovate in the orthopedic domain to improve the lives of people.
 
-During my experience in research and industrial product development, I had the chance to cover all phases of new products and update of industrialized ones.
-From the understanding of the need (biomechanical study) to the concept, design, prototyping, validation and manufacturing leading. 
+During my research for the CEA at the laboratory of robotics, my project was to develop assitance solutions in order to facilitate the work of operators in a slaughterhouse. 
+I first did a biomechanical study to understand the reasons why the operators were hurting themselves at their workstations. Then I looked for solutions, designed prototypes and implemented tests to validate the product.
+At the end of the proof of concept I worked with a provider to industrialize it and to leave it as a test to the operators.
 
-In fact, during my career, I had some great experiences as a technical project leader. 
+During my career, I also had some great experiences as a technical project leader. 
 Following a product's lifecycle from the customer's requirements to its delivery and working closely with all the internal and external stakeholders.
-In particular, I can take as an example my experience at Zodiac's as a technical project manager. 
-I was the technical reference for our Italian client and my role was to translate the client's requirements into technical specifications, in accordance with the different R\&D Managers (Mechanical, Electronical and Software team leaders).
+In particular, I can take as an example my experience at Zodiac as a technical project manager. 
+I was the technical reference for our Italian client and my role was to translate the client's requirements into technical specifications, in accordance with the different R\&D managers in the mechanical, electronical and software teams.
 In collaboration with the team leaders, I established the different deadlines and set the priorities to be able to fit to the client's planning, as well as, that of our R\&D teams.
-In addition to the organizational part, I asked to perform tests when derisking was necessary, and I conceved a harness to confrom to the client's needs regarding the electronical parts to control, the dimensions required and the path it would take through the airplane seats.
+In addition to the organizational part, I mandated the execution of tests when derisking was necessary, and I conceived a harness to confrom to the client's needs regarding the electronical parts to control, the dimensions required and the path it would take through the airplane seats.
 When the first system was completed, I went to test it with a software engineer at the client's site, in order to validate the results.
 
-Highly adaptable, methodical and proactive, you will be able to count on me to support the R\&D and Project Managers as well as the Sales and Marketing Teams
-to lead the project to succes in a cross-functional and cross-cultural environment.
+Highly adaptable, methodical and proactive, you will be able to count on me to lead projects to succes in a cross-functional and cross-cultural environment.
 
-Motivated to be part of an international and innovative team I would be thrilled to join Johnson \& Johnson to continue to learn and grow while contributing in delivering impactful products to patients worldwide.
+Motivated to be part of an international and innovative team I would be thrilled to join Johnson \& Johnson, to continue to learn and grow while contributing in delivering impactful products to patients worldwide.
 %I would be thrilled to learn more about this job opening. Thank you for your time and I look forward to hearing from you.
 
 \end{cvletter}
