--- a/cv-en-short.tex
+++ b/cv-en-short.tex
@@ -45,11 +45,11 @@
 \begin{aside}
     \includegraphics[width=.8\columnwidth]{img/LG}
     %\textbf{Immediate availability}
-    Antony, France
+    91 rue du Colonel Fabien, 92160 Antony, France
     ~
     French Nationality
     13 January, 1989, France
-    In cohabitation
+    Domestic partnership
     Driving licence
     %
     \section{Contact}
@@ -121,7 +121,7 @@ Highly adaptable and currious, I enjoy learning on a daily basis and sharing my 
  
 %------------------------------------------------
 \entry
-  {2020 -- today}
+  {2020 -- 2020}
   {Safran}
   {Defence}
   {\jobtitle{Systems engineer}\\
