--- a/cv-fr-short.tex
+++ b/cv-fr-short.tex
@@ -45,7 +45,7 @@
 \begin{aside}
     \includegraphics[width=.8\columnwidth]{img/LG}
     %\textbf{Disponibilité immédiate}
-    Antony, France
+    91 rue du Colonel Fabien, 92160 Antony, France
     ~
     Nationalité Française
     13 janvier 1989, France
@@ -121,7 +121,7 @@ D'une grande capacité d'adaptation et très curieuse, j’aime apprendre au quo
  
 %------------------------------------------------
 \entry
-  {2020 -- today}
+  {2020 -- 2020}
   {Safran}
   {Défense}
   {\jobtitle{Ingénieure système}\\
