--- a/cv-en-short.tex
+++ b/cv-en-short.tex
@@ -35,7 +35,7 @@
 
 \begin{document}
 
-\header{Laura }{Gomez}{Tecnical Project Manager in Mechatronics and Biomechanics}         % Your name
+\header{Laura }{Gomez}{System Engineer in Mechatronics and Biomechanics}         % Your name
 %\lastupdated
 
 %----------------------------------------------------------------------------------------
@@ -59,7 +59,8 @@
     \section{Project Management}
     Microsoft Office
     ERP (Dolibarr, Sage)
-    Requirements management (IBM DOORS, Reqtify)
+    Requirements management (IBM DOORS, Reqtify, Xatis)
+    CESAM \& 6-Sigma (Beginner)
     ~
     Patent drafting
     Follow-up Regulatory marking
@@ -73,12 +74,14 @@
 
     Multiphysics simulation %(Flotherm)
     Electronic design %(Simulink, Labview, Zuken, Altium) 
-    \\Human movement study %(Nexus pour Vicon, MT Manager pour Xsens (centrales inertielles))
+    
+    Human movement study %(Nexus pour Vicon, MT Manager pour Xsens (centrales inertielles))
     %
     \section{Languages}
     French (Native language)
     English (Fluent)
     Spanish (Fluent)
+    German (Beginner)
     %
     \section{Soft Skills}
     Autonomous and proactive
@@ -94,7 +97,7 @@
 
 \section{Abs}{tract}
 
-As a mechatronics engineer, I have had the opportunity to drive the development of hardware and software for a variety of products,
+As a Mechatronics Systems engineer, I have had the opportunity to drive the development of hardware and software for a variety of products and domains,
 from their development phase to their industrialization. I have also been given the opportunity to manage the compliance of products
 that already existed so that they could be tailored to meet the specific needs of the client.
 In this context, I ensured good communication between all internal and external stakeholders concerned,
@@ -106,25 +109,11 @@ Highly adaptable and currious, I enjoy learning on a daily basis and sharing my 
 \begin{entrylist}
 %------------------------------------------------
 \entry
-  {2021}
-  {NeoFarm}
-  {Farming robot}
-  {\jobtitle{Mechatronics Engineer, Industrial Engineer}\\
-  Development and testing of farming tools adapted to the robot
-
-  Vendor Tracking
-
-  Regulatory marking tracking
-
-  ERP implementation and design rules
-   }
- 
-%------------------------------------------------
-\entry
-  {2020 -- 2020}
-  {Safran}
-  {Defence}
-  {\jobtitle{Systems engineer}\\
+  {2020--today }
+  {Safran Engineering Services (Consultant)}
+  {Defence, Aeronautics, Farming robot}
+  {\jobtitle{Systems engineer, Mechatronics Engineer, Industrial Engineer}\\
+  
   Biomechanical study
 
   Collection and synthesis of the need from multiple stakeholders
@@ -133,14 +122,22 @@ Highly adaptable and currious, I enjoy learning on a daily basis and sharing my 
 
   French and foreign supplier monitoring
 
-  Application of requirements under IBM DOORS
+  Application of requirements under IBM DOORS and Xatis
+  
+  Development and testing of farming tools adapted to the robot
+
+  Regulatory marking tracking
+
+  ERP implementation and design rules
+
   }
 %------------------------------------------------
 \entry
-  {2018--2019}
+  {2018--2019 }
   {Safran - Zodiac (Consultant for Alten)}
   {Aeronautics}
-  {\jobtitle{Mechatronics Systems Technical Project Manager}\\
+  {\jobtitle{Technical Project Manager on Mechatronics Systems }\\
+  
   Collection of the needs of an Italian customer
 
   Translation of the need into R\&D actions
@@ -154,10 +151,11 @@ Highly adaptable and currious, I enjoy learning on a daily basis and sharing my 
   }
 %------------------------------------------------
 \entry
- {2017--2018}
+ {2017--2018 }
  {Air Liquide Medical Systems (Consultant for Ametra)}
  {Medical - ventilation}
  {\jobtitle{Mechanical referent - new product and plastics processing}\\
+ 
  In charge of the evolution of the current system to reduce cracks
 
  Follow-up of initial samples of the plastic shell of a new device
@@ -165,13 +163,15 @@ Highly adaptable and currious, I enjoy learning on a daily basis and sharing my 
  Follow-up of plastic manufacturers
 
  8D
+
  }
 %------------------------------------------------
 \entry
- {2016}
+ {2016 }
  {CEA (Consultant for Manpower)}
  {Food processing industry cobotics}
- {\jobtitle{Technical project manager of cobotic systems}\\
+ {\jobtitle{Technical project manager on Cobotic Systems}\\
+
  Study of the need at the workplace (biomechanical)
 
  Solution search, design, demonstrator manufacturing
@@ -179,7 +179,18 @@ Highly adaptable and currious, I enjoy learning on a daily basis and sharing my 
  Testing of prototypes by operators
 
  Patent drafting
+
  }
+ %------------------------------------------------
+%\entry
+%{2010 -- 2013 }
+% {Valeo (Apprenticeship)}
+% {Automotive}
+% {\jobtitle{Engineer assistant}\\
+% Comparison of fluid mechanics software
+
+% Post-processing of Flotherm results for model reduction
+% }
 %------------------------------------------------
 
 \end{entrylist}
@@ -202,7 +213,7 @@ Highly adaptable and currious, I enjoy learning on a daily basis and sharing my 
 {2008--2013}
 {Mechatronics Engineering School} %\\{\normalfont Robotics and Simulation Specialties}}
 {ISTY - UVSQ, France and Korea}
-{\jobtitle{Robotics and Simulation Specialties}}
+{\jobtitle{Robotics and Thermo-Simulation Specialties}}
 %{6 months in Korea at Ajou University}
 \end{entrylist}
 
