--- a/cv-fr-short.tex
+++ b/cv-fr-short.tex
@@ -59,7 +59,8 @@
     \section{Gestion de projet}
     Microsoft Office
     ERP (Dolibarr, Sage)
-    Gestion des exigences (IBM DOORS, Reqtify)
+    Gestion des exigences 
+    (IBM DOORS, Reqtify, Xatis)
     ~
     Rédaction brevet
     Suivi Marquage règlementaire
@@ -87,13 +88,13 @@
     %
     \section{Hobbies}
     Violoncelle et orchestre
+    Dessin
     Vélo et course à pied
     Sports canins
     %
 \end{aside}
 
 \section{Rés}{umé}
-
 Mécatronicienne de formation, j’ai eu l’occasion de piloter le développement matériel et logiciel de produits, 
 dès leur phase de développement et jusqu'à leur industrialisation. Il m'a également été donné de pouvoir piloter la mise en conformité de produits 
 déjà existants afin qu'ils répondent aux besoins spécifiques du client.
@@ -106,44 +107,36 @@ D'une grande capacité d'adaptation et très curieuse, j’aime apprendre au quo
 \begin{entrylist}
 %------------------------------------------------
 \entry
-  {2021}
-  {NeoFarm}
-  {Robotique maraichère}
-  {\jobtitle{Ingénieure mécatronique, Ingénieure industrialisation}\\
-   Développements et tests d'outils maraichers adaptés au robot
-
-   Suivi fournisseurs
-
-   Suivi marquage réglementaire
-
-   Mise en place ERP et règles de conception
-   }
- 
-%------------------------------------------------
-\entry
-  {2020 -- 2020}
-  {Safran}
-  {Défense}
-  {\jobtitle{Ingénieure système}\\
+  {2020--aujourd'hui }
+  {Safran Engineering Services (prestation)}
+  {Défense, Aéronautique, Robotique maraichère}
+  {\jobtitle{Ingénieure systèmes mécatroniques, ingénieure industrialisation}\\
   Etude biomécanique
 
-  Recueil et synthèse du besoin en provenance des diverses parties prenantes
-
-  Recherche des solutions existantes sur le marché
+  Recueil et synthèse du besoin en provenance des diverses parties prenantes, recherche des solutions existantes sur le marché puis rédaction du cahier des charges
 
   Suivi fournisseurs Français et étrangers
 
-  Déclinaison d’exigences sous IBM DOORS 
+  Déclinaison d’exigences sous IBM DOORS et Xatis
+
+  Développements et tests d'outils maraichers adaptés au robot
+
+  Suivi marquage réglementaire
+
+  Mise en place ERP et règles de conception
+
   }
 %------------------------------------------------
 \entry
-  {2018--2019}
+  {2018--2019 }
   {Safran - Zodiac (prestation pour Alten)}
   {Aéronautique}
   {\jobtitle{Chef de projet technique de systèmes mécatronique}\\
   Recueil du besoin d'un client Italien
 
   Traduction du besoin en actions R\&D
+  
+  Planification et coordination de la mise en oeuvre des actions auprès des différentes équipes. Suivi des jalons
 
   Gestion des échanges technique et documentaire entre le client et les différents BE
 
@@ -154,32 +147,42 @@ D'une grande capacité d'adaptation et très curieuse, j’aime apprendre au quo
   }
 %------------------------------------------------
 \entry
- {2017--2018}
+ {2017--2018 }
  {Air Liquide Medical Systems (prestation pour Ametra)}
  {Médical - ventilation}
  {\jobtitle{Référente mécanique - nouveau produit et plasturgie}\\
  En charge de l'évolution du système actuel pour réduire les fissures
 
- Suivi des échantillons initiaux de la coque plastique d'un nouvel appareil
+ Suivi des échantillons initiaux de la coque plastique d'un appareil en cours d'industrialisation
 
  Suivi des plasturgistes
 
- 8D
+ 8D-task forces
+
  }
 %------------------------------------------------
 \entry
- {2016}
+ {2016 }
  {CEA (intérim pour Manpower)}
  {Cobotique Agro-alimentaire}
  {\jobtitle{Chef de projet technique de systèmes cobotique}\\
  Etude du besoin au poste de travail (biomécanique)
 
- Recherche de solutions, conception, fabrication de démonstrateurs
-
- Essais des prototypes par les opérateurs
+ Recherche de solutions innovantes, conception et fabrication de démonstrateurs et essais des prototypes par les opérateurs
 
  Rédaction de brevets
  }
+  %------------------------------------------------
+% \entry
+% {2010 -- 2013 }
+% {Valeo (Apprentissage)}
+% {Automobile}
+% {\jobtitle{Apprentie ingénieure}\\
+% Comparatif de logiciels de mécanique des fluides
+
+% Post-traitement de résultats de Flotherm pour la réduction de modèles
+
+% }
 %------------------------------------------------
 
 \end{entrylist}
@@ -193,16 +196,16 @@ D'une grande capacité d'adaptation et très curieuse, j’aime apprendre au quo
 \begin{entrylist}
 %--------------------------------------G----------
 \entry
-{2013--2015}
-{Master recherche international d'ingénierie biomédical}% \\{\normalfont spécialité biomécanique}}
-{Arts et Métiers, France}
-{\jobtitle{Spécialité biomécanique}}
+    {2013--2015     }
+    {Master recherche international d'ingénierie biomédical}% \\{\normalfont spécialité biomécanique}}
+    {Arts et Métiers, France}
+    {\jobtitle{Spécialité biomécanique}}
 %------------------------------------------------
 \entry
-{2008--2013}
-{Ecole d'ingénieur en mécatronique} %\\{\normalfont spécialité robotique et simulation}}
-{ISTY - UVSQ, France et Corée}
-{\jobtitle{Spécialité robotique et simulation}}
+ {2008--2013     }
+    {Ecole d'ingénieur en mécatronique} %\\{\normalfont spécialité robotique et simulation}}
+    {ISTY - UVSQ, France et Corée}
+    {\jobtitle{Spécialité robotique et simulation thermique}}
 %{6 mois en Corée à l'Université Ajou}
 \end{entrylist}
 
