--- a/coverletter-en.tex
+++ b/coverletter-en.tex
@@ -58,7 +58,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``Millions saw the apple fall, Newton was the only one who asked why?. Bernard Baruch"}
+%\quote{``Millions saw the apple fall, Newton was the only one who asked why?. Bernard Baruch"}
 
 
 %-------------------------------------------------------------------------------
@@ -67,13 +67,13 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Johnson \& Johnson}
+  {Capgemini}
  % {City\\Switzerland}
   {Switzerland}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Technical Project Manager}
+\lettertitle{Technical Project Manager or System Engineer}
 % How the letter is opened
 \letteropening{Dear Sir or Madam,}
 % How the letter is closed
@@ -107,8 +107,8 @@
 Passionate, curious and with an analytical mindset, I love finding solutions to help people stay healthy and improve their daily lives;
 and it is this passion which has guided me in my choice of studies. Firstly, with a master's degree in mechatronic engineering and then by studying a second master's in biomechanical engineering. 
 
-What attracts me to Johnson \& Johnson is the great number of solutions you develop to Keep People Moving. From skull implants to foot screws, you innovate in the orthopedic domain to improve the lives of people.
-
+%What attracts me to Johnson \& Johnson is the great number of solutions you develop to Keep People Moving. From skull implants to foot screws, you innovate in the orthopedic domain to improve the lives of people.
+%
 During my research for the CEA at the laboratory of robotics, my project was to develop assitance solutions in order to facilitate the work of operators in a slaughterhouse. 
 I first did a biomechanical study to understand the reasons why the operators were hurting themselves at their workstations. Then I looked for solutions, designed prototypes and implemented tests to validate the product.
 At the end of the proof of concept I worked with a provider to industrialize it and to leave it as a test to the operators.
@@ -123,7 +123,7 @@ When the first system was completed, I went to test it with a software engineer 
 
 Highly adaptable, methodical and proactive, you will be able to count on me to lead projects to succes in a cross-functional and cross-cultural environment.
 
-Motivated to be part of an international and innovative team I would be thrilled to join Johnson \& Johnson, to continue to learn and grow while contributing in delivering impactful products to patients worldwide.
+Motivated to be part of an international and innovative team I would be thrilled to join Capgemini, to continue to learn and grow while contributing in delivering impactful products to patients worldwide.
 %I would be thrilled to learn more about this job opening. Thank you for your time and I look forward to hearing from you.
 
 \end{cvletter}
