lettre de motivation version médicale

--- a/coverletter-en.tex
+++ b/coverletter-en.tex
@@ -67,13 +67,13 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Capgemini}
+  {Sonceboz}
  % {City\\Switzerland}
-  {Switzerland}
+  {Sonceboz-Sombeval\\Switzerland}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Technical Project Manager or System Engineer}
+\lettertitle{MedTech Technical Project Manager}
 % How the letter is opened
 \letteropening{Dear Sir or Madam,}
 % How the letter is closed
@@ -107,24 +107,23 @@
 Passionate, curious and with an analytical mindset, I love finding solutions to help people stay healthy and improve their daily lives;
 and it is this passion which has guided me in my choice of studies. Firstly, with a master's degree in mechatronic engineering and then by studying a second master's in biomechanical engineering. 
 
+I like to work in the medical field and with innovative teams. With your expertise and beliefs, I'm sure I've found a great company to work for.
 %What attracts me to Johnson \& Johnson is the great number of solutions you develop to Keep People Moving. From skull implants to foot screws, you innovate in the orthopedic domain to improve the lives of people.
 %
-During my research for the CEA at the laboratory of robotics, my project was to develop assitance solutions in order to facilitate the work of operators in a slaughterhouse. 
-I first did a biomechanical study to understand the reasons why the operators were hurting themselves at their workstations. Then I looked for solutions, designed prototypes and implemented tests to validate the product.
-At the end of the proof of concept I worked with a provider to industrialize it and to leave it as a test to the operators.
+But it was mainly during my mission at Zodiac that I had the chance to manage a team for the technical aspect of the project.
+My position allowed me to have a global vision of the project and I therefore knew for each problem that disrupted the planning and the project, what would have an impact and consequences on the rest of the project.
+I then tried to understand the reasons and then I listened to the solutions proposed by the people concerned and their arguments.
+Once I knew all the ins and outs, I could redirect the tasks by explaining all the decisions and warn the people at the end of the chain of future impacts.
 
-During my career, I also had some great experiences as a technical project leader. 
-Following a product's lifecycle from the customer's requirements to its delivery and working closely with all the internal and external stakeholders.
-In particular, I can take as an example my experience at Zodiac as a technical project manager. 
-I was the technical reference for our Italian client and my role was to translate the client's requirements into technical specifications, in accordance with the different R\&D managers in the mechanical, electronical and software teams.
-In collaboration with the team leaders, I established the different deadlines and set the priorities to be able to fit to the client's planning, as well as, that of our R\&D teams.
-In addition to the organizational part, I mandated the execution of tests when derisking was necessary, and I conceived a harness to confrom to the client's needs regarding the electronical parts to control, the dimensions required and the path it would take through the airplane seats.
-When the first system was completed, I went to test it with a software engineer at the client's site, in order to validate the results.
+The human aspects which seemed essential to me are the clear communication on the objectives, the targeted performances as well as the individual expectations while promoting cooperation.
 
-Highly adaptable, methodical and proactive, you will be able to count on me to lead projects to succes in a cross-functional and cross-cultural environment.
+Very adaptable, methodical and proactive, you can count on me to carry out projects in an environment with transversal professions and a multicultural context.
 
-Motivated to be part of an international and innovative team I would be thrilled to join Capgemini, to continue to learn and grow while contributing in delivering impactful products to patients worldwide.
-%I would be thrilled to learn more about this job opening. Thank you for your time and I look forward to hearing from you.
+Motivated to be part of an international and innovative team, I would like to join Sonceboz and continue to learn while winning to deliver impactful products, to patients around the world.
+
+I would be thrilled to learn more about this job opening. Thank you for your time and I look forward to hearing from you.
+
+% What attracts me to X is the sheer number of solutions you develop to keep people moving. From cranial implants to foot screws, you are breaking new ground in orthopedics to improve people's lives.
 
 \end{cvletter}
 
