--- a/cv-en-short.tex
+++ b/cv-en-short.tex
@@ -60,7 +60,7 @@
     Microsoft Office
     ERP (Dolibarr, Sage)
     Requirements management (IBM DOORS, Reqtify, Xatis)
-    CESAM \& 6-Sigma (Beginner)
+    CESAM \& 6-Sigma
     ~
     Patent drafting
     Follow-up Regulatory marking
