--- a/cv-fr-short.tex
+++ b/cv-fr-short.tex
@@ -100,7 +100,7 @@ dès leur phase de développement et jusqu'à leur industrialisation. Il m'a ég
 déjà existants afin qu'ils répondent aux besoins spécifiques du client.
 Dans ce contexte, j'ai assuré une bonne communication entre toutes les parties prenantes internes et externes concernées, 
 afin de respecter les délais et la qualité du produit final.
-D'une grande capacité d'adaptation et très curieuse, j’aime apprendre au quotidien et partager mes connaissances avec mes collègues.
+D'une grande capacité d'adaptation et très curieuse, j’aime apprendre au quotidien et échanger avec mes collègues.
 
 \section{Experience}{ Professionnelle}
 
@@ -108,8 +108,8 @@ D'une grande capacité d'adaptation et très curieuse, j’aime apprendre au quo
 %------------------------------------------------
 \entry
   {2020--aujourd'hui }
-  {Safran Engineering Services (prestation)}
-  {Défense, Aéronautique, Robotique maraichère}
+  {Safran Engineering Services (prestation interne Safran)}
+  {Défense,  Robotique}
   {\jobtitle{Ingénieure systèmes mécatroniques, ingénieure industrialisation}\\
   Etude biomécanique
 
